--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -8,6 +8,10 @@
 
 @layer components {
   .navItem {
-    @apply px-[1.2rem] py-[0.8rem] md:px-[0.5rem] md:py-[0.5rem] w-auto hover:border hover:border-blackTert hover:rounded-[4px];
+    @apply px-[1.2rem] py-[0.8rem] md:px-[0.5rem] md:py-[0.5rem] w-auto hover:font-bold;
+  }
+
+  .blurFilter {
+    backdrop-filter: blur(10px);
   }
 }
